--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:800&display=swap" rel="stylesheet">
     <title>blog</title>
 </head>
 <body>
-    <h1>이윤지</h1>
+<!-- <header>
+    헤더
+</header> -->
+<section>
+<div class="title">
+  <div id="big">불한당: 나쁜 놈들의 세상</div>
+    <div id="s">The Merciless</div>
+</div>
+<div id="cir_1"></div>
+<div class="line"></div>
+<div id="but_1">View more ></div>
+</section>
+<nav>
+네비
+</nav>
+<footer>
+푸터
+</footer>
 
     <script src="js/script.js"></script>
 </body>
