--- a/index.html
+++ b/index.html
@@ -6,28 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css"/>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    
     <title>blog</title>
 </head>
 <body>
-<!-- <header>
-    헤더
-</header> -->
+ <header id="top_menu">
+     <img src="img/logo.png" width="70px">
+    <ul id="menu">
+        <lu class="menu_1">Movie</lu>
+        <li class="menu_1">D-0</li>
+        <li class="menu_1">D+0</li>
+    </ul>
+</header>
 <section>
 <div class="title">
+
+    <img id="can" src="img/can.png" width="80px">
   <div id="big">불한당: 나쁜 놈들의 세상</div>
     <div id="s">The Merciless</div>
-</div>
 <div id="cir_1"></div>
 <div class="line"></div>
+<div id="day">2017.05.17</div>
+<div id="story">
+    <div id="bold">"사람을 믿지마라 상황을 믿어야지 상황을"<br><br></div>
+    범죄조직의 1인자를 노리는 재호와 세상 무서운 것 없는 패기 넘치는 신참 현수는 교도소에서 만나 서로에게 끌리고 <br>
+    끈끈한 의리를 다져간다.출소 후, 함께 권력을 차지하기 위해 의기투합하던 중, 서로에 대해 새로운 사실을 알게 되면서<br>
+    그들의 관계는 흔들리기 시작하는데…<br></div>
 <div id="but_1">View more ></div>
+</div>
+</section>
+<section>
+<div id="info">
+<div data-animate-in="up" id="movie_img"><img src="img/main.jpg" width="380px"></div>
+</div>
+            
 </section>
 <nav>
-네비
+네비s
 </nav>
 <footer>
 푸터
 </footer>
 
-    <script src="js/script.js"></script>
+
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="js/script.js"></script>
+
 </html>
