--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo:800&display=swap" rel="stylesheet">
+   
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Nanum+Myeongjo&display=swap" rel="stylesheet">
     <title>blog</title>
 </head>
 <body>
@@ -38,7 +38,16 @@
 </section>
 <section>
 <div id="info">
-<div data-animate-in="up" id="movie_img"><img src="img/main.jpg" width="380px"></div>
+<div data-animate-in="up" id="movie_img"><img src="img/main.jpg" width="400spx"></div>
+<div id="title">색이 많은 영화 <br>불한당</div><div id="colorBox"></div>
+<div id="box_1"></div>
+<div data-animate-in="up" id="info_1">
+불한당은 2017년에 개봉이 되었다 개봉 당시에는 소위 말하는 손익분기점도 넘기지 못하는 망한영화가 되었다.<br>
+그렇게 이 영화가 끝이 나는가 싶었지만 불한당은 거기서 시작이었다. <br>
+불한당 마니아층 "불한당원"들의 자체적인 대관 만으로 스크린 점유율이 처음 0%를 기록했던 <br>
+2017년 7월 6일 보다 약 2만 5000명 높은 95만 7993명을 기록했다.<br>
+ 한국 영화 역사상 없던 기록이었고 기적 같은 일이었다. <br>
+ 최근 시행한 불한당 2주년 대관도 성공적으로 끝마치고  불한당은 지금부터 시작이다.</div>
 </div>
             
 </section>
