--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <div class="overlay-content">
     <a href="#" id="btn1">movie</a>
     <a href="second.html">D-0</a>
-    <a href="#">D+0</a>
+    <a href="03.html">D+0</a>
+    <a href="music.html">etc</a>
 
   </div>
 </div>
