--- a/second.html
+++ b/second.html
@@ -317,7 +317,7 @@ margin-right: 20px;
     z-index: -10;
     height: 800px;
     width: 100%;
-    background: url('img/bg.gif')  no-repeat center center fixed;
+    background: url('img/bg-min.gif')  no-repeat center center fixed;
     background-size: cover; 
 }
 
@@ -608,21 +608,21 @@ position: absolute;
 $tab1.addEventListener("click", bg_1);
 function bg_1(event) {
     console.log( $section);
-    $section.style.background="url(img/bg.gif)no-repeat center center fixed/cover";
+    $section.style.background="url(img/bg-min.gif)no-repeat center center fixed/cover";
   
 }
 
 $tab2.addEventListener("click", bg_2);
 function bg_2(event) {
     console.log( $section);
-    $section.style.background="url(img/04.gif)no-repeat center center fixed/cover";
+    $section.style.background="url(img/04-min.gif)no-repeat center center fixed/cover";
   
 }
 
 $tab3.addEventListener("click", bg_3);
 function bg_3(event) {
     console.log( $section);
-    $section.style.background="url(img/03.gif)no-repeat center center fixed/cover";
+    $section.style.background="url(img/03-min.gif)no-repeat center center fixed/cover";
   
 }
 
@@ -630,7 +630,7 @@ function bg_3(event) {
 $tab4.addEventListener("click", bg_4);
 function bg_4(event) {
     console.log( $section);
-    $section.style.background="url(img/05.gif)no-repeat center center fixed/cover";
+    $section.style.background="url(img/05-min.gif)no-repeat center center fixed/cover";
   
 }
 
