--- a/03.html
+++ b/03.html
@@ -583,6 +583,6 @@ position: absolute;
                 </div>
 
         </section>
-        <script src="js/js.js"></script>
-
+        
+        <script src="js/js_02.js"></script>
 </html>
