--- a/second.html
+++ b/second.html
@@ -440,7 +440,7 @@ position: absolute;
                   <div>
                     <a href="#">
                       <h2>"엄마가 그랬어요 불쌍한 사람 보면 돕고 살라고"</h2>
-                      <p>현수의 도움으로 칼에 맞을 뻔한 재호가 도움을 받게 되고, 현수는 재호에게 신리를 얻게 된다</p>
+                      <p>현수의 도움으로 칼에 맞을 뻔한 재호가 도움을 받게 되고, 현수는 재호에게 신뢰를 얻게 된다</p>
                     </a>
                   </div>
                 </li>
@@ -457,7 +457,7 @@ position: absolute;
                         <div>
                           <a href="#">
                                 <h2>"한재호가 협박했어, 너 나가게 해달라고"</h2>
-                                <p>뺑소니 사고로 인해 현수의 어머니가 죽게 되고 <br>재호의 도움으로 어머니의 장례를 진행 할수 있게 된다 </p>
+                                <p>뺑소니 사고로 인해 현수의 어머니가 죽게 되고 <br>재호의 도움으로 어머니의 장례를 진행 할 수 있게 된다 </p>
                           </a>
                         </div>
                       </li>
@@ -465,7 +465,7 @@ position: absolute;
                             <div>
                               <a href="#">
                                 <h2>"형, 나 경찰이야"</h2>
-                                <p>재호는 현수에게 나가서 같이 일을 하자 말하지만 <br>현수는 재호에게 상상하지도 못했던 고백을 듣게된다</p>
+                                <p>재호는 현수에게 나가서 같이 일을 하자 말하지만 <br>현수는 재호에게 상상하지도 못했던 고백을 듣게 된다</p>
                               </a>
                             </div>
                           </li>
@@ -501,7 +501,7 @@ position: absolute;
                          <br> 현수는 감방안에 들어가자 마자 짝짝이 대회에 나가게 되는데. 키도, 덩치도 작고 예쁘게 생긴 현수를 본 재호는<br>
                            당연히 현수가 질거라 생각했지만 현수는 빠르게 손바닥을 주먹으로 바꿔 <br>
                            자신보다 몇배의 사람을 이기게 된다. 이 일을 계기로 현수는 재호의 눈에 들어가게 되고, <br>
-                          현수는 교소소안 화제의 인물이 된다
+                          현수는 교도소안 화제의 인물이 된다
                         </div>
                          </div>
 
@@ -521,7 +521,7 @@ position: absolute;
                             <div id="info_01">
                              <br>현수는 재호를 제거할려는 인물에게 공격을 받을수도 있는 위기에서 재호를 구해주게 된다.<br>
                               현수는 재호에게 찾아가지만 재호는 겨우 담배 한보루를 준다.<br>
-                              왜 자신을 도와줬냐는 말에 엄마가 불쌍한 사람을 보면 돕고 살라교 했다며 이야기 한다.
+                              왜 자신을 도와줬냐는 말에 엄마가 불쌍한 사람을 보면 돕고 살라고 했다며 이야기 한다.
                             </div>
                              </div>
    
@@ -556,8 +556,8 @@ position: absolute;
                            </div><br>
                            <div id="story_01">   <div class="title">Story</div>
                            <div id="info_01">
-                            <br>분명 멀쩡했던 엄마가 죽자 현수는 이성을 잃게 된다.<br> 하지만 감옥에서 얌전히만 있지 않았던 현수는 나갈수 없게 된다.<br>
-                            재호가 밤에 현수를 찾아와 현수의 입장을 이해한다고 하지만 현수는 들리지 않고 오히려 재호와 싸움을 하게 된다.<br>
+                            <br>분명 멀쩡했던 엄마가 죽자 현수는 이성을 잃게 된다.<br>감옥에서 얌전히만 있지 않았던 현수는 나갈수 없게 된다.<br>
+                            재호가 밤에 현수를 찾아와 현수의 입장을 이해한다고 하지만 현수에게는 들리지 않고 오히려 재호와 싸움을 하게 된다.<br>
                             하지만 다음날 아침 재호의 도움으로 엄미의 잘례를 치를 수 있게 된다.</div>
                             </div>
                             
@@ -585,5 +585,5 @@ position: absolute;
                 </div>
  
         </section>
-        <script src="js/js.js"></script>
+        <script src="js/js_03.js"></script>
 </html>
